making a quick change

--- a/NetCore-DockerSample/Views/Home/Index.cshtml
+++ b/NetCore-DockerSample/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
         <ul>
             <li>Serversncode docker demo application</li>
             <li>Using Docker to deploy a .net core application</li>
+            <li>This is a just a sample application to help me figure it all out.</li>
         </ul>
     </div>
 </div>
